manager shop filter works, but slowly